fixed .repairs__item width on mobile size

--- a/src/scss/repairs.scss
+++ b/src/scss/repairs.scss
@@ -4,7 +4,6 @@
 
     .repairs__item {
         height: 160px;
-        min-width: 100%;
     }
 
     .repairs__text {
